--- a/geosk/templates/site_base.html
+++ b/geosk/templates/site_base.html
@@ -4,7 +4,58 @@
       <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
       <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico">
 {% endblock %}
+
+{% block tabs %}
+<li id="nav_layers">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<i class="fa fa-angle-down fa-lg"></i></a>
+  <ul class="dropdown-menu">
+    <li><a href="{% url "layer_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Layers" %}</a></li>
+    <li><a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Documents" %}</a></li>
+    {% if user.is_authenticated %}
+    <li><a href="{% url "services" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Remote Services" %}</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="{% url "layer_upload" %}">Upload Layer</a></li>
+    {% if 'geonode.contrib.createlayer' in INSTALLED_APPS %}
+      <li><a href="{% url "layer_create" %}">{% trans "Create Layer" %}</a></li>
+    {% endif %}
+    <li><a href="{% url "document_upload" %}">Upload Document</a></li>
+    <li><a href="{% url "register_service" %}">{% trans "Add Remote Service" %}</a></li>
+    {% endif %}
+  </ul>
+</li>
+<li id="nav_maps">
+  {% if user.is_authenticated %}
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<i class="fa fa-angle-down fa-lg"></i></a>
+  <ul class="dropdown-menu">
+    <li><a href="{% url "maps_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Explore Maps" %}</a></li>
+    <li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
+  </ul>
+  {% else %}
+  <a href="{% url "maps_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Maps" %}</a>
+  {% endif %}
+</li>
+<li>
+ {% if user.is_superuser  %}
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Users" %}<i class="fa fa-angle-down fa-lg"></i></a>
+  <ul class="dropdown-menu">
+    <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
+    <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
+    <li><a href="{% url "group_category_list" %}">{% trans "Group Categories" %}</a></li>
+    {% if perms.announcements.can_manage %}
+    <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
+    {% endif %}
+    {% if user.is_superuser %}
+    <li role="separator" class="divider"></li>
+    <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
+    <li><a href="{% url "invitations:send-invite" %}">{% trans "Invite User" %}</a></li>
+    <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
+    {% endif %}
+  </ul>
+  {% endif %}
+</li>
+
 {% block extra_tab %}
+{% if user.is_staff %}
 <li id="nav_osk">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Sensors" %}<i class="fa fa-angle-down fa-lg"></i></a>
   {% if user.is_authenticated %}
@@ -21,7 +72,11 @@
   {% endif %}
 </li>
 <li><a href="{% url "about_services" %}">{% trans "Services" %}</a></li>
+{% endif %}
 {% endblock %}
+{% endblock %}
+
+
 
 {% block footer %}
 <footer>
