--- a/geosk/templates/site_index.html
+++ b/geosk/templates/site_index.html
@@ -4,16 +4,24 @@
 {% comment %}
 This is where you can override the hero area block. You can simply modify the content below or replace it wholesale to meet your own needs. 
 {% endcomment %}
+
+{% block body_class %}{% endblock %}
+
+
   {% block hero %}
-  <div class="jumbotron">
-    <div class="container">
-      <h1>{% trans "GET-IT" %}</h1>
-      <p>{% blocktrans %}Share your maps, measurements, and sensors. Easily.{% endblocktrans %}</p>
-      <p>{% blocktrans %}<a href="http://www.get-it.it" title="GET-IT website" target="_blank">GET-IT</a> allows you to easily share geospatial data on the web with simple actions.
-          The suite is the first open-source collaborative effort toward the integration of traditional geographic information with observational data.{% endblocktrans %}</p>
-      <span>{% trans 'Need help?' %} <a href="http://getit.readthedocs.io/en/latest/index.html" title="GET-IT doc" target="_blank">{% trans 'Getting Started' %}</a></span>
-    </div>
-  </div>
+      <div class="custom-home">
+            <div class="container">
+                <h1>AREA<br/>RISERVATA.</h1>
+            </div>
+        </div>
+        <div class="bg--white">
+            <div class="container custom-container">
+                <p class="col-2">
+                    Curabitur accumsan tortor magna, non vehicula lectus condimentum id. Etiam ac massa eu nulla dignissim fringilla at sed mi. Duis sit amet nisi vel tortor eleifend dapibus <br/>
+                    Integer eu est sed sem semper molestie quis vel odio. Integer et quam leo. Integer quam augue, tempor id ex et, lacinia venenatis nibh.
+                </p>
+            </div>
+        </div>
   {% endblock %}
 
 {% block bigsearch %}
@@ -24,24 +32,29 @@ This is where you can override the hero area block. You can simply modify the co
 
 {% block showcase %}
   <section id="showcase">
-    <div class="row">
-      <div class="container text-center">
-        <h2>Featured Datasets</h2>
+    <div class="row bg--green">
+      <div class="container custom-container">
         <div class="row home-facets">
         {% with facet_type='home' %}
          {% facets as facets %}
-          <div class="col-md-6">
-            <p><a href="{% url "layer_browse" %}"><i class="fa fa-square-o fa-4x rotate-45"></i></a></p>
-            <h2><a href="{% url "layer_browse" %}">{{ facets.layer|default:_("No") }} {% blocktrans count counter=facets.layer %}Layer{% plural %}Layers{% endblocktrans %}</a></h2>
-            <p>{% trans "Click to search for geospatial data published by other users, organizations and public sources. Download data in standard formats." %}</p>
-            {% if user.is_authenticated %}
-            <p class="text-center"><a class="btn btn-default" href="{% url "layer_upload" %}" role="button">{% trans "Add layers" %} &raquo;</a></p>
-            {% else %}
-            <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore layers" %} &raquo;</a></p>
-            {% endif %}
+          <div class="col-md-{% if user.is_superuser or user.is_staff %}4{% else %}6{% endif %}">
+            <div class="custom-col-content">
+                <div class="custom-ball">
+                    <img src="./static/img/layers.png" />
+                </div>
+                <div class="custom-text">
+                    <h4><a href="{% url "layer_browse" %}">{{ facets.layer|default:_("No") }} {% blocktrans count counter=facets.layer %}Layer{% plural %}Layers{% endblocktrans %}</a></h4>
+                    <p>{% trans "Click to search for geospatial data published by other users, organizations and public sources. Download data in standard formats." %}</p>
+                </div>
+                 {% if user.is_authenticated %}
+                    <a href="{% url "layer_upload" %}" role="button"><div class="custom-button">{% trans "Add layers" %}</div></a>
+                {% else %}
+                    <a href="{% url "layer_browse" %}" role="button"><div class="custom-button">{% trans "Explore layers" %} &raquo; </div></a>
+                {% endif %}
+            </div>
           </div>
           {% if user.is_staff %}
-          <div class="col-md-6">
+          <div class="col-md-{% if user.is_superuser or user.is_staff %}4{% else %}6{% endif %}">
             <p><a href="{% url "osk_browse" %}"><i class="fa fa-square-o fa-4x rotate-45"></i></a></p>
             <!--<h2><a href="{% url "osk_browse" %}">{{ facets.layer|default:_("No") }} {% blocktrans count counter=facets.layer %}Sensor{% plural %}Sensors{% endblocktrans %}</a></h2>-->
             <h2><a href="{% url "osk_browse" %}">{% trans 'Sensors'%}</a></h2>
@@ -53,19 +66,25 @@ This is where you can override the hero area block. You can simply modify the co
             {% endif %}
           </div>
           {% endif %}
-          <div class="col-md-6">
-            <p><a href="{% url "maps_browse" %}"><i class="fa fa-map-marker fa-4x"></i></a></p>
-            <h2><a href="{% url "maps_browse" %}">{{ facets.map|default:_("No") }} {% blocktrans count counter=facets.map %}Map{% plural %}Maps{% endblocktrans %}</a></h2>
-            <p>{% trans "Data is available for browsing, aggregating and styling to generate maps which can be saved, downloaded, shared publicly or restricted to specify users only." %}</p>
-            {% if user.is_authenticated %}
-            <p><a class="btn btn-default" href="{% url "new_map" %}" role="button">{% trans "Create maps" %} &raquo;</a></p>
-            {% else %}
-            <p><a class="btn btn-default" href="{% url "maps_browse" %}" role="button">{% trans "Explore maps" %} &raquo;</a></p>
-            {% endif %}
+          <div class="col-md-{% if user.is_superuser or user.is_staff %}4{% else %}6{% endif %}">
+            <div class="custom-col-content">
+                <div class="custom-ball">
+                    <img src="./static/img/maps.png" />
+                </div>
+                <div class="custom-text">
+                    <h4><a href="{% url "maps_browse" %}">{{ facets.map|default:_("No") }} {% blocktrans count counter=facets.map %}Map{% plural %}Maps{% endblocktrans %}</a></h4>
+                    <p>{% trans "Data is available for browsing, aggregating and styling to generate maps which can be saved, downloaded, shared publicly or restricted to specify users only." %}</p>
+                </div>
+                 {% if user.is_authenticated %}
+                    <a href="{% url "new_map" %}" role="button"><div class="custom-button">{% trans "Create maps" %}</div></a>
+                {% else %}
+                    <a href="{% url "maps_browse" %}" role="button"><div class="custom-button">{% trans "Explore maps" %}</div></a>
+                {% endif %}
+            </div>
           </div>
           {% if user.is_superuser %}
           {% if user.is_staff %}
-          <div class="col-md-6">
+          <div class="col-md-{% if user.is_superuser or user.is_staff %}4{% else %}6{% endif %}">
             <p><a href="{% url "document_browse" %}"><i class="fa fa-newspaper-o fa-4x"></i></a></p>
             <h2><a href="{% url "document_browse" %}">{{ facets.document|default:_("No") }} {% blocktrans count counter=facets.document %}Document{% plural %}Documents{% endblocktrans %}</a></h2>
             <p>{% trans "As for the layers and maps GeoNode allows to publish tabular and text data, manage theirs metadata and associated documents." %}</p>
@@ -76,31 +95,22 @@ This is where you can override the hero area block. You can simply modify the co
             {% endif %}
           </div>
           {% endif %}
-          <div class="col-md-6">
-            <p><a href="{% url "profile_browse" %}"><i class="fa fa-user fa-4x"></i></a></p>
-            <h2><a href="{% url "profile_browse" %}">{{ facets.user|default:_("No") }} {% blocktrans count counter=facets.user %}User{% plural %}Users{% endblocktrans %}</a></h2>
-            <p>{% trans "IHP-WINS allows registered users to easily upload geospatial data and various documents in several formats." %}</p>
-            <p><a class="btn btn-default" href="{% url "profile_browse" %}" role="button">{% trans "See users" %} &raquo;</a></p>
+          <div class="col-md-{% if user.is_superuser or user.is_staff %}4{% else %}6{% endif %}">
+            <div class="custom-col-content">
+                <div class="custom-ball">
+                    <img src="./static/img/users.png" />
+                </div>
+                <div class="custom-text">
+                    <h4><a href="{% url "profile_browse" %}">{{ facets.user|default:_("No") }} {% blocktrans count counter=facets.user %}User{% plural %}Users{% endblocktrans %}</a></h4>
+                    <p>{% trans "IHP-WINS allows registered users to easily upload geospatial data and various documents in several formats." %}</p>
+                </div>
+                <a href="{% url "profile_browse" %}" role="button"><div class="custom-button">{% trans "See users" %}</div></a>
+            </div>
           </div>
           {% endif %}
         {% endwith %}
         </div>
       </div>
-    </div>
-    <div class="row">
-        <div class="container text-center">
-            {% verbatim %}
-            <div ng-app="featured">
-              <div ng-repeat="item in featured | limitTo:4">
-                <div class="col-md-3">
-                  <a href="{{ item.detail_url }}"><img ng-src="{{ item.thumbnail_url }}" /></a>
-                  <h4>{{ item.title | limitTo: 20 }}{{item.title.length > 20 ? '...' : ''}}</h4>
-                </div>
-              </div>
-            </div>
-      		{% endverbatim %}
-            <p><a href="/search/">Explore all datasets</a></p>
-        </div>
     </div>
   </section>
   {% endblock %}
