--- a/geosk/templates/base.html
+++ b/geosk/templates/base.html
@@ -172,9 +172,9 @@
       <p>Please use a <strong>modern browser</strong> like Mozilla Firefox, Google Chrome or Safari.</p>
     </div>
 
-  <div id="wrap" class="custom-wrap custom-max-width bg--white">
+  <div class="custom-wrap custom-max-width {% block custom-wrap-class %}bg--white{% endblock %}">
     {% block middle %}
-    <div class="container">
+    <div class="container {% block custom-container-class %}{% endblock %}">
       {% include "_status_message.html" %}
       {% include "_announcements.html" %}
       {% include "_messages.html" %}
