Continue change layout for IBF.

--- a/geosk/templates/search/_search_user_content.html
+++ b/geosk/templates/search/_search_user_content.html
@@ -69,7 +69,7 @@
         {% endif %}
     </div>
     <div class="col-md-12">
-    {% include 'search/_pagination.html' %}
+    {% include 'search/_pagination_users.html' %}
     </div>
   </div>
 
