--- a/geosk/templates/search/_search_content.html
+++ b/geosk/templates/search/_search_content.html
@@ -62,10 +62,11 @@
         <div class="row">
           <div class="col-md-12 grid-spacer">
             {% include 'base/_resourcebase_snippet.html' %}
-            {% include 'search/_pagination.html' %}
+            {% include 'search/_pagination_resource.html' %}
           </div>
         </div>
     </div>
+
   </div>
   {% include "_bulk_permissions_form.html" %}
 </div>
