--- a/geosk/templates/base/_resourcebase_snippet.html
+++ b/geosk/templates/base/_resourcebase_snippet.html
@@ -6,7 +6,7 @@
   </div>
   <article ng-repeat="item in results" resource_id="{{ item.id }}" ng-cloak class="ng-cloak">
     <div class="col-lg-12 item-container">
-        <div class="custom-layer-container">
+        <div class="custom-layer-container with-border">
           <!--<div class="col-lg-12 profile-avatar">-->
             <div class="col-lg-4 item-thumb">
               <a href="{{ item.detail_url }}">
