--- a/geosk/templates/maps/map_detail.html
+++ b/geosk/templates/maps/map_detail.html
@@ -204,12 +204,13 @@
             </li>
             {% include "_permissions_form.html" %}
             {% endif %}
-
+            {% if user.is_superuser %}
             <li class="list-group-item">
               <h4>{% trans "Copy this map" %}</h4>
               <p>{% trans "Duplicate this map and modify it for your own purposes" %}</p>
               <a href="{% url "new_map" %}?copy={{ resource.id }}" class="btn btn-default btn-md btn-block custom-full-btn">{% trans "Create a New Map" %}</a>
             </li>
+            {% endif %}
             {% if 'geonode.qgis_server' in INSTALLED_APPS %}
               <li class="list-group-item">
                   <h4>{% trans "Embed this map" %}</h4>
