--- a/geosk/templates/maps/map_list.html
+++ b/geosk/templates/maps/map_list.html
@@ -7,21 +7,25 @@
 
 {% block body %}
 <div class="page-header">
+    {% if user.is_superuser %}
     <a href="{% url "new_map" %}" target="_self">
         <div class="custom-layer-button pull-right">
             {% trans "Create a New Map" %}
             <div class="btn btn-primary">+</div>
         </div>
     </a>
+    {% endif %}
   <h2>{% trans "Explore Maps" %}</h2>
 </div>
   {% include "search/_search_content.html" %}
+  {% if user.is_superuser %}
   {% include "_bulk_permissions_form.html" %}
+  {% endif %}
 {% endblock %}
 
 {% block extra_script %}
 {{ block.super }}
-  {% if GEONODE_SECURITY_ENABLED %}
+  {% if GEONODE_SECURITY_ENABLED and user.is_superuser%}
     {% include "_permissions_form_js.html" %}
   {% endif %}
   <script type="text/javascript">
